# simple-api-rocket

./: Cargo.toml  Makefile  README.md
src/: handler.rs  main.rs  model.rs
